--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,7 +5,7 @@
   <title>Optical Guru 2.0</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon"  href="assets/image/OGred.png"  type="image/x-icon">
+  <link rel="icon"  href="assets/images/OGred.png"  type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Material Icon -->
