--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Optical Guru 2.0</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="assets/images/OGred.png"  type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
