--- a/web1/src/index.html
+++ b/web1/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Optical Guru 2.0</title>
   <base href="./">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="icon"  href="assets/images/OGred.png"  type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
