--- a/digi/web/src/index.html
+++ b/digi/web/src/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Optical Guru 2.0</title>
+  <title>Digieyepro</title>
   <base href="./">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <link rel="icon"  href="assets/images/OGred.png"  type="image/x-icon">
+  <link rel="icon"  href=""  type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Material Icon -->
