--- a/garment/web/src/index.html
+++ b/garment/web/src/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <link rel="icon"  href="assets/images/OGred.png"  type="image/x-icon">
+  <link rel="icon"  href=""  type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Material Icon -->
